--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
                       <label for="ciudad" class="form-label">Evento al que vas a asistir</label>
                       <select class="form-select" id="ciudad" name="ciudad" required>
                           <option value="">Selecciona una ciudad</option>
-                          <option value="Bogotá">Bogotá</option>
-                          <option value="Buga">Buga</option>
-                          <option value="Cúcuta">Cúcuta</option>
+                          <option value="Barranquilla">Barranquilla</option>
+                          <option value="Neiva">Neiva</option>
+                          <option value="Villavicencio">Villavicencio</option>
                       </select>
                   </div>
                   <!-- Eres invitado de... -->
@@ -58,24 +58,15 @@
                       <label for="cliente" class="form-label">Eres invitado de...</label>
                       <select class="form-select" id="cliente" required>
                           <option value="">Selecciona una opción</option>
-                          <option value="Alejandro Velasquez">Alejandro Velasquez</option>
-                          <option value="Belia Díaz">Belia Díaz</option>
-                          <option value="David Villa">David Villa</option>
-                          <option value="Fernando Álvarez">Fernando Álvarez</option>
-                          <option value="Fernando Contreras">Fernando Contreras</option>
-                          <option value="Julián Lopéz">Julián Lopéz</option>
-                          <option value="Juliana Vallejo">Juliana Vallejo</option>
-                          <option value="Laura Cruz">Laura Cruz</option>
-                          <option value="María José Ruales">María José Ruales</option>
-                          <option value="Miguel Angel Tinoco">Miguel Angel Tinoco</option>
-                          <option value="Nubia Lucía Bólivar">Nubia Lucía Bólivar</option>
-                          <option value="Oscar Javier Ríos">Oscar Javier Ríos</option>
-                          <option value="Rubén Darío Londoño">Rubén Darío Londoño</option>
-                          <option value="Sofía Serrano">Sofía Serrano</option>
-                          <option value="Sonia Sánchez">Sonia Sánchez</option>
-                          <option value="Valentina Osorio">Valentina Osorio</option>
-                          <option value="Victor Rodríguez">Victor Rodríguez</option>
-                          <option value="Wilson Gómez">Wilson Gómez</option>
+                          <option value="Carlos Alberto Rodriguez Duarte">Carlos Alberto Rodriguez Duarte</option>
+                          <option value="David Esteban Huertas Molina">David Esteban Huertas Molina</option>
+                          <option value="Germán Alfonso Ortegón Viña">Germán Alfonso Ortegón Viña</option>
+                          <option value="Ivan Yesid Olaya Charry">Ivan Yesid Olaya Charry</option>
+                          <option value="Juan David Moncada Alzate">Juan David Moncada Alzate</option>
+                          <option value="Juan Jacobo Vargas Ossa">Juan Jacobo Vargas Ossa</option>
+                          <option value="Jose Miguel Núñez Renza">Jose Miguel Núñez Renza</option>
+                          <option value="Yeferson Peñaranda Soto">Yeferson Peñaranda Soto</option>
+                          <option value="Otro">Otro</option>
                       </select>
                   </div>
               </div>
